--- a/package.json
+++ b/package.json
@@ -10,10 +10,20 @@
   },
   "dependencies": {
     "autoprefixer": "10.4.14",
+    "bootstrap": "^5.3.1",
     "next": "13.4.12",
     "postcss": "8.4.27",
     "react": "18.2.0",
+    "react-bootstrap": "^2.9.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.10.1",
+    "react-redux": "^8.1.2",
     "tailwindcss": "3.3.3"
+  },
+  "devDependencies": {
+    "@types/node": "20.4.7",
+    "@types/react": "18.2.18",
+    "sass": "^1.64.2",
+    "typescript": "5.1.6"
   }
 }
