--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "18.2.0",
     "react-bootstrap": "^2.9.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.47.0",
     "react-icons": "^4.10.1",
     "react-redux": "^8.1.2",
     "tailwindcss": "3.3.3"
