--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "animate.css": "^4.1.1",
     "autoprefixer": "10.4.14",
     "bootstrap": "^5.3.1",
     "next": "13.4.12",
@@ -19,6 +20,7 @@
     "react-hook-form": "^7.47.0",
     "react-icons": "^4.10.1",
     "react-redux": "^8.1.2",
+    "react-toastify": "^9.1.3",
     "tailwindcss": "3.3.3"
   },
   "devDependencies": {
